# rustyclip

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
src/: clipboard.rs  commands.rs  lib.rs  main.rs  store.rs
