[package]
name = "rustyclip"
version = "0.1.1"
edition = "2024"
authors = ["Barend van der Walt <38956787+bvdwalt@users.noreply.github.com>"]
description = "🦀 RustyClip: A simple clipboard history manager for macOS/Linux"
license = "MIT"
readme = "README.md"
repository = "https://github.com/bvdwalt/rustyclip"
keywords = ["clipboard", "history", "cli"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
arboard = "3.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
